HTML/CSS/JS update, audio assets

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
             <!--Header row-->
             <div class="row">
                 <div class="col-12 text-center">
-                    <h1>Card Game Name</h1>
+                    <h1>WARLORDS</h1>
                 </div>
             </div>
             <br>
 
             <!--Game area-->
-            <article class="game-border border border-dark rounded">
+            <article class="rounded">
                 <!--OPPONENT AREA===========================-->
                 <!--Opponent health row-->
                 <div class="row">
