--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Card Game</title>
+    <title>WARLORDS</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -26,7 +26,6 @@
                     <h1>WARLORDS</h1>
                 </div>
             </div>
-            <br>
 
             <!--Game area-->
             <article class="rounded">
